Fix scrollbar style

--- a/src/app.css
+++ b/src/app.css
@@ -125,21 +125,6 @@
   }
 }
 
-::-webkit-scrollbar {
-  width: 16px;
-}
-
-::-webkit-scrollbar-thumb {
-  border-radius: 9999px;
-  border: 4px solid transparent;
-  background-clip: content-box;
-  @apply bg-accent;
-}
-
-::-webkit-scrollbar-corner {
-  display: none;
-}
-
 .shiki.material-theme-ocean {
   background-color: hsl(200 95% 14%) !important;
   padding: 16px;
